force-app/main/default/objects/Explore_Invitation__c/Explore_Invitation__c.object-meta.xml
<CustomObject>
    <label>Explore Invitation</label>
    <nameField>
        <label>Explore Invitation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Explore Invitations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>