force-app/main/default/objects/Explore_Invitation__c/fields/External_Calendar_Event_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Calendar_Event_ID__c</fullName>
    <inlineHelpText>This field will be used to manage the creation/deletion of scheduled visits in the siteusers external calendar</inlineHelpText>
    <label>External Calendar Event ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>