force-app/main/default/objects/Explore_Invitation__c/fields/Invited_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Invited_Account_Name__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; SiteUserAccount__r.Account__r.Id,  SiteUserAccount__r.Account__r.Name )</formula>
    <label>Invited Account Name</label>
    <type>Text</type>
</CustomField>