force-app/main/default/objects/Explore_Invitation__c/fields/Invited_Account_SF_ID__c.field-meta.xml
<CustomField>
    <fullName>Invited_Account_SF_ID__c</fullName>
    <formula>SiteUserAccount__r.Account__r.Id_Largo_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invited Account SF ID</label>
    <type>Text</type>
</CustomField>