force-app/main/default/objects/Explore_Invitation__c/fields/Invited_SiteUser_Name__c.field-meta.xml
<CustomField>
    <fullName>Invited_SiteUser_Name__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp;  SiteUserAccount__r.SiteUser__c , SiteUserAccount__r.SiteUser__r.Name)</formula>
    <label>Invited SiteUser Name</label>
    <type>Text</type>
</CustomField>