force-app/main/default/objects/Explore_Invitation__c/fields/Invited_Siteuser_SF_ID__c.field-meta.xml
<CustomField>
    <fullName>Invited_Siteuser_SF_ID__c</fullName>
    <formula>SiteUserAccount__r.SiteUser__r.Id_Largo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invited Siteuser SF ID</label>
    <type>Text</type>
</CustomField>