force-app/main/default/objects/Explore_Invitation__c/fields/Plot_Exploration__c.field-meta.xml
<CustomField>
    <fullName>Plot_Exploration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plot Exploration</label>
    <referenceTo>Plot_Exploration__c</referenceTo>
    <relationshipLabel>Explore Invitations</relationshipLabel>
    <relationshipName>Explore_Invitations</relationshipName>
    <type>Lookup</type>
</CustomField>