force-app/main/default/objects/Explore_Invitation__c/fields/SiteUser_invites__c.field-meta.xml
<CustomField>
    <fullName>SiteUser_invites__c</fullName>
    <formula>Plot_Exploration__r.SiteUser__r.Name</formula>
    <label>Who invites?</label>
    <type>Text</type>
</CustomField>