force-app/main/default/objects/Explore_Invitation__c/fields/SiteUserAccount__c.field-meta.xml
<CustomField>
    <fullName>SiteUserAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SiteUserAccount</label>
    <referenceTo>SiteUserAccount__c</referenceTo>
    <relationshipLabel>Explore Invitations</relationshipLabel>
    <relationshipName>Explore_Invitations</relationshipName>
    <type>Lookup</type>
</CustomField>