force-app/main/default/objects/Explore_Invitation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>SiteUserAccount__c</columns>
    <columns>Plot_Exploration__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>